--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <span>5/5</span>
       </div>
       <div class="tags">
-        <span class="fantasy">Fantasy</span>
+        <span class="fantasy">Fantasia</span>
         <span class="mystery">Ciencia Ficcion</span>
       </div>
       <div class="info">
